# wal-memory

./: .gitignore  CLAUDE.md  Dockerfile  QUICKSTART.md  config.example.yaml  config.yaml  pyproject.toml  start.sh  test_api.sh
docs/: coding-standards.md
docs/superpowers/plans/: 2026-04-06-ai-memory-platform.md  2026-04-06-tencent-vectordb-adapter.md  2026-04-07-llm-layer-classifier-and-cross-collection-search.md  2026-04-08-admin-persistence.md  2026-04-08-mem0-fork-glm-compat.md
docs/superpowers/specs/: 2026-04-06-ai-memory-platform-design.md  2026-04-08-admin-persistence-design.md  2026-04-08-mem0-fork-glm-compat-design.md  2026-04-15-wal-llm-provider-design.md
src/mem0/: __init__.py
src/mem0/llms/: anthropic.py  configs.py  wal.py
src/mem0/memory/: main.py  telemetry.py  utils.py
src/mem0/utils/: factory.py
src/mem0/vector_stores/: configs.py
src/memory_platform/: config.py  main.py
src/memory_platform/adapters/: tencent_vector.py
src/memory_platform/api/: admin.py  memories.py
src/memory_platform/db/: app_registry.py  connection.py  mysql_manager.py
src/memory_platform/embeddings/: __init__.py  mock.py
src/memory_platform/ext/: confidence.py  layer.py  scope.py
tests/: conftest.py
tests/e2e/: test_glm_integration.py
tests/integration/: test_admin_api.py  test_app.py  test_memories_api.py  test_recall.py
tests/unit/: test_auth.py  test_confidence.py  test_config.py  test_cross_collection.py  test_degradation.py  test_layer.py  test_mem0_json_parsing.py  test_scope.py  test_wal_llm.py  test_write.py
tests/unit/db/: test_connection.py  (+2 more)
(+10 files in other folders)
